# arcscript-interpreters

./: .gitignore  LICENSE.txt  README.md  clean.sh  generate.ps1  generate.sh  package.json
.github/workflows/: CSharp.yml  JavaScript.yml  TypeScript.yml  cpp-build-test.yml  main.yml  pkg.pr.new-typescsript.yml  pkg.pr.new.yml
CSharp/: .gitignore  CSharp.csproj  CSharp.sln  TestObjects.cs  UnitTests.cs
CSharp/Interpreter/: ArcscriptExceptions.cs  ArcscriptExpression.cs  ArcscriptExpressionBase.cs  ArcscriptFunctions.cs  ArcscriptOutputs.cs  ArcscriptParserBase.cs  ArcscriptState.cs  ArcscriptTranspiler.cs  ArcscriptVisitor.cs  ErrorListener.cs
CSharp/Interpreter/INodes/: IHasVariables.cs  IProject.cs
CSharp/Project/: Attribute.cs  Board.cs  Component.cs  Connection.cs  Element.cs  HelperClasses.cs  Project.cs  Variable.cs
CSharp/__tests__/: member.json  parseErrors.json  replaceVariables.json  runtimeErrors.json  stringConcat.json  valid.json
Cpp/: .gitignore  CMakeLists.txt  README.md
Cpp/cmake/: ExternalAntlr4Cpp.cmake  FindANTLR.cmake  antlr4-generator.cmake.in  antlr4-runtime.cmake.in
Cpp/demo/: ArcscriptTest.cpp
Cpp/demo/tests/: conditions.json  member.json  parseErrors.json  stringConcat.json  valid.json
Cpp/src/: ArcscriptErrorExceptions.h  ArcscriptErrorListener.cpp  ArcscriptErrorListener.h  ArcscriptExpression.cpp  ArcscriptExpression.h  ArcscriptFunctions.cpp  ArcscriptFunctions.h  ArcscriptHelpers.h  ArcscriptOutputs.cpp  ArcscriptOutputs.h  ArcscriptParserBase.cpp  ArcscriptParserBase.h  ArcscriptTranspiler.cpp  ArcscriptTranspiler.h  ArcscriptVisitor.cpp  ArcscriptVisitor.h
JavaScript/: README.md  package-lock.json  package.json  webpack.config.js
JavaScript/__tests__/: antlr4.interpreter.spec.js  replaceVariables.json  runtimeErrors.json  stringConcat.json  valid.json
JavaScript/src/: AcrscriptState.js  AcrscriptVisitor.js  ArcscriptFunctions.js  ArcscriptState.js  ArcscriptVisitor.js  ErrorListener.js  antlr4.interpreter.d.ts  antlr4.interpreter.js  index.d.ts  index.js  utils.js
JavaScript/src/errors/: fatal-error.d.ts  index.d.ts  parse-error.d.ts  runtime-error.d.ts
TypeScript/: .prettierignore  .prettierrc  README.md  eslint.config.mts  package.json  pnpm-lock.yaml  rolldown.config.ts  tsconfig.json  tsdown.config.ts  vitest.config.ts
TypeScript/src/: ArcscriptFunctions.ts  ArcscriptState.ts  ArcscriptVariable.ts  ArcscriptVisitor.ts  ErrorListener.ts  antlr4.interpreter.ts  index.ts  types.ts  utils.ts
TypeScript/src/__tests__/: antlr4.interpreter.test.ts  conditions.json  member.json  parseErrors.json  replaceVariables.json  runtimeErrors.json  stringConcat.json  valid.json
TypeScript/src/errors/: fatal-error.ts  index.ts  parse-error.ts  runtime-error.ts
__tests__/: antlr4.interpreter.spec.js  valid.json
grammar/: ArcscriptLexer.g4  ArcscriptParser.g4
grammar/Cpp/: transformGrammar.py
src/: AcrscriptState.js  AcrscriptVisitor.js  utils.js
src/errors/: ArcscriptErrors.js  fatal-error.js  parse-error.js  runtime-error.js
